--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -3,14 +3,67 @@ body,
 #app {
   width: 100%;
   height: 100%;
+  min-width: 960px;
+  min-height: 540px;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  border: 0;
+  overflow: auto;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--layout-background-color);
 }
 
-.main-container{
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+//***************布局侧边栏***************//
+.layout-aside {
+  background-color: var(--layout-aside-background-color);
+  width: var(--layout-aside-width);
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-color: var(--layout-aside-border-color, #f885ff);
+  border-width: 0;
+  border-top-width: var(--layout-aside-border-top-width, 0);
+  border-right-width: var(--layout-aside-border-right-width, 1px);
+  border-bottom-width: var(--layout-aside-border-bottom-width, 0);
+  border-left-width: var(--layout-aside-border-left-width, 0);
+}
+
+.layout-aside-logo {
+  height: var(--layout-aside-logo-height);
+  display: flex;
+  flex-direction: row;
+  .layout-aside-logo-image{
+    width: var(--layout-aside-logo-width, 80px);
+    line-height: var(--layout-aside-logo-height);
+    text-align: center;
+    display:flex;
+    align-items:center;
+  }
+  .layout-aside-logo-text{
+    flex: 1;
+    line-height: var(--layout-aside-logo-height);
+  }
+}
+
+.layout-aside-menu {
+  flex: 1;
+}
+
+//***************布局侧边栏***************//
+
+.layout-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.layout-header {
+  height: var(--layout-header-height);
+}
+
+.layout-center {
+  flex: 1;
 }
