--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -11,24 +11,19 @@ body,
   overflow: auto;
   display: flex;
   flex-direction: row;
-  background-color: var(--layout-background-color);
 }
 
 //***************布局侧边栏***************//
 .layout-aside {
-  background-color: var(--layout-aside-background-color);
   width: var(--layout-aside-width);
   overflow-x: hidden;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   border-style: solid;
-  border-color: var(--layout-aside-border-color, #f885ff);
+  border-color: var(--layout-aside-border-color);
   border-width: 0;
-  border-top-width: var(--layout-aside-border-top-width, 0);
   border-right-width: var(--layout-aside-border-right-width, 1px);
-  border-bottom-width: var(--layout-aside-border-bottom-width, 0);
-  border-left-width: var(--layout-aside-border-left-width, 0);
 }
 
 .layout-aside-logo {
