--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -1,9 +1,19 @@
 :root{
+  // 侧边栏 背景色
+  --layout-aside-bg: #545c64;
+  --layout-aside-menu-text-color: #ffffff;
+
   // 侧边栏 宽度
-  --layout-aside-width: 240px;
+  --layout-aside-width: 220px;
+
+
   // 侧边栏 边框
   --layout-aside-border-color: #a2a2a2;
   --layout-aside-border-top-width: 0px;
   --layout-aside-border-right-width: 1px;
 
+
+  // logo 宽高
+  --layout-logo-width: var(--layout-aside-width);
+  --layout-logo-height: 50px;
 }
