--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -5,7 +5,7 @@
 
   // 侧边栏 宽度
   --layout-aside-width: 220px;
-
+  --layout-aside-collapse-width: 64px;
 
   // 侧边栏 边框
   --layout-aside-border-color: #a2a2a2;
