--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -1,4 +1,7 @@
 :root{
+  // 头部高度 高
+  --layout-header-height: 50px;
+
   // 侧边栏 背景色
   --layout-aside-bg: #545c64;
   --layout-aside-menu-text-color: #ffffff;
@@ -12,8 +15,9 @@
   --layout-aside-border-top-width: 0px;
   --layout-aside-border-right-width: 1px;
 
-
   // logo 宽高
   --layout-logo-width: var(--layout-aside-width);
-  --layout-logo-height: 50px;
+  --layout-logo-height: var(--layout-header-height);
+
+
 }
