--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -1,4 +1,5 @@
 :root{
+  --el-color-primary: #38BFD4;
   // 头部高度 高
   --layout-header-height: 50px;
 
@@ -9,11 +10,6 @@
   // 侧边栏 宽度
   --layout-aside-width: 220px;
   --layout-aside-collapse-width: 64px;
-
-  // 侧边栏 边框
-  --layout-aside-border-color: #a2a2a2;
-  --layout-aside-border-top-width: 0px;
-  --layout-aside-border-right-width: 1px;
 
   // logo 宽高
   --layout-logo-width: var(--layout-aside-width);
