--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -1,19 +1,25 @@
 :root{
+  --el-color-primary-dark-2: #32abbe;
   --el-color-primary: #38BFD4;
-  // 头部高度 高
-  --layout-header-height: 50px;
-
+  --el-color-primary-light-1: #4bc5d8;
+  --el-color-primary-light-2: #5fcbdc;
+  --el-color-primary-light-3: #73d2e0;
+  --el-color-primary-light-4: #87d8e5;
+  --el-color-primary-light-5: #9bdfe9;
+  --el-color-primary-light-6: #afe5ed;
+  --el-color-primary-light-7: #c3ebf2;
+  --el-color-primary-light-8: #d7f2f6;
+  --el-color-primary-light-9: #ebf8fa;
   // 侧边栏 背景色
   --layout-aside-bg: #545c64;
   --layout-aside-menu-text-color: #ffffff;
 
+  // 头部高度 高
+  --layout-header-height: 50px;
   // 侧边栏 宽度
   --layout-aside-width: 220px;
   --layout-aside-collapse-width: 64px;
-
   // logo 宽高
   --layout-logo-width: var(--layout-aside-width);
   --layout-logo-height: var(--layout-header-height);
-
-
 }
