--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -25,7 +25,8 @@
   --layout-logo-height: var(--layout-header-height);
 
   // 顶部标题
-  --layout-header-bar-color: #3f4042;
+  --layout-header-bar-color: #e00909;
+  --layout-header-bar-hover-bg-color: rgba(224, 9, 9, 0.11);
   --layout-nav-bars-bg: #ffffff;
   --layout-nav-bars-border-color-light: #f1f2f3;
 }
