--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -38,8 +38,7 @@ body,
     display: flex;
     flex-direction: column;
     overflow-x: hidden !important;
-    transition: max-height 5s ease-in;
-
+    transition: width .5s ease;
     .el-scrollbar__view {
       overflow: hidden;
     }
@@ -79,6 +78,34 @@ body,
     .flex-warp-item-box {
       width: 100%;
       height: 100%;
+    }
+  }
+}
+
+
+.layout-nav-bars-user-bar {
+  --el-text-color-regular:var(--layout-header-bar-color);
+  width: 100px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: var(--layout-header-bar-color);
+}
+.layout-nav-bars-user-bar-icon{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-right: 5px !important;
+  cursor: pointer;
+  .icon{
+    margin: 0 10px !important;
+  }
+  &:hover{
+    background: var(--layout-header-bar-hover-bg-color);
+    opacity: 0.5;
+    .icon{
+      animation: selected 0.5s ease-in-out;
     }
   }
 }
