--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -10,6 +10,9 @@
   --el-color-primary-light-7: #c3ebf2;
   --el-color-primary-light-8: #d7f2f6;
   --el-color-primary-light-9: #ebf8fa;
+  // 默认背景
+  --layout-bg: #ffffff;
+  --layout-color: #171717;
   // 侧边栏 背景色
   --layout-aside-bg: #545c64;
   --layout-aside-menu-text-color: #ffffff;
