--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -14,7 +14,7 @@
   --layout-bg: #ffffff;
   --layout-color: #171717;
   // 侧边栏 背景色
-  --layout-aside-bg: #545c64;
+  --layout-aside-bg: var(--layout-bg);
   --layout-aside-menu-text-color: #ffffff;
 
   // 头部高度 高 不包含标签栏高度
