--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -40,7 +40,7 @@ body,
     flex-direction: column;
     overflow-x: hidden !important;
     transition: width .5s ease;
-
+    border-right: 1px solid var(--layout-aside-border-right-color);
     .el-scrollbar__view {
       overflow: hidden;
     }
