--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -68,7 +68,7 @@ body,
     }
 
     &:hover {
-      color: var(--layout-logo-hover-color, var(--color-primary-light-5));
+      color: var(--layout-logo-hover-color, var(--el-color-primary-light-3));
     }
 
     &-medium-img {
