--- a/src/theme/var.scss
+++ b/src/theme/var.scss
@@ -14,10 +14,6 @@
   --layout-bg: #ffffff;
   --layout-color: #171717;
   --layout-border: var(--layout-bg);
-  // 侧边栏 背景色
-  --layout-aside-bg: var(--layout-bg);
-  --layout-aside-menu-text-color: var(--layout-color);
-  --layout-aside-border-right-color: var(--layout-border, var(--el-color-primary-light-6)); // 侧边栏右边框颜色
 
   // 头部高度 高 不包含标签栏高度
   --layout-header-height: 50px;
@@ -35,4 +31,10 @@
   --layout-nav-bars-hover-color: var(--el-color-primary); // 选中字体
   --layout-nav-bars-hover-bg-color: var(--el-color-primary-light-6); // 选中背景
   --layout-nav-bars-border-color: var(--layout-border, var(--el-color-primary-light-6)); // 边框
+  // 侧边菜单栏
+  --layout-aside-menu-bg: var(--layout-bg); // 背景色
+  --layout-aside-menu-color: var(--layout-color); // 默认字体
+  --layout-aside-menu-hover-color: var(--el-color-primary); // 选中字体
+  --layout-aside-menu-hover-bg-color: var(--el-color-primary-light-6); // 选中背景
+  --layout-aside-menu-border-color: var(--layout-border, var(--el-color-primary-light-6)); // 边框
 }
